Enable database initialization and add bot stop endpoint
Uncommented and enabled DockerNetworkDatabaseInitializer for database setup in MainApplication. Added TradingTaskService to handle bot trading loops asynchronously. Introduced a new endpoint to stop all running bots and refactored TradingService to delegate trading loop logic. Updated TradingBotRepository with a method to find bots by status.